2009-11-12 Christian Feuersaenger <ludewich@users.sourceforge.net>

	- Added the 'small mindmap' style.

2009-11-06 Christian Feuersaenger <ludewich@users.sourceforge.net>

	- FPU: improved sanity checks and exception handling for the decompose
	routines (pgfmathfloatgetexponent etc) and the number parser.
	Added exception 'wrong lowlevel format'.

2009-10-20 Christian Feuersaenger <ludewich@users.sourceforge.net>

	- renamed 'text mark/style' to 'text mark style' and 'text mark/as node'
	to 'text mark as node' (there are backw. compatibility hooks).
	This should avoid confusion with '.unknown' handlers.

2009-10-19 Christian Feuersaenger <ludewich@users.sourceforge.net>
	
	- improved error recovery of external lib.

2009-10-16 Christian Feuersaenger <ludewich@users.sourceforge.net>

	- temporarily disabled the auto cross references -- it seems they compile
	only with increased memory.

2009-10-15 Christian Feuersaenger <ludewich@users.sourceforge.net>

	- Installed preliminary version of automatic cross referencing tool.
	Now, every codeexample is parsed for options and control sequences which
	have been defined somewhere else in the document; pdf cross references are
	built automatically as well.
	- configured links to be blue throughout the document.
	- external lib: added \tikzexternaldisable such that partial externalization is possible
	although the document contains unsupported constructs (where environments
	can't be identified without macro expansion).
	The pgfmanual compiles with image externalization now.

2009-10-13 Christian Feuersaenger <ludewich@users.sourceforge.net>

	- added \pgfutilsolvetwotwoleq to solve 2x2 linear equation systems using
	column pivotisation and gauss elim. Should result in improved quality
	compared with \pgftransforminvert as internal equation solver

2009-10-09 Christian Feuersaenger <ludewich@users.sourceforge.net>

	- Defined \pgfdeclaregenericanchor to allow anchors which get the shape