@@ -1,0 +1,83 @@
+% Part 3: Array and other sizes for TeX (and Metafont and MetaPost).
+% 
+% If you want to change some of these sizes only for a certain TeX
+% variant, the usual dot notation works, e.g.,
+% main_memory.hugetex = 20000000
+% 
+% If a change here appears to be ignored, try redumping the format file
+% with fmtutil-sys.
+
+% Memory. Must be less than 8,000,000 total.
+% 
+% main_memory is relevant only to initex, extra_mem_* only to non-ini.
+% Thus, have to redump the .fmt file after changing main_memory; to add
+% to existing fmt files, increase extra_mem_*.  (To get an idea of how
+% much, try \tracingstats=2 in your TeX source file;
+% web2c/tests/memtest.tex might also be interesting.)
+% 
+% To increase space for boxes (as might be needed by, e.g., PiCTeX),
+% increase extra_mem_bot.
+% 
+% For some xy-pic samples, you may need as much as 700000 words of memory.
+% For the vast majority of documents, 60000 or less will do.
+% 
+main_memory = 9000000 % words of inimemory available; also applies to inimf&mp
+extra_mem_top = 6000000     % extra high memory for chars, tokens, etc.
+extra_mem_bot = 6000000     % extra low memory for boxes, glue, breakpoints, etc.
+
+% Words of font info for TeX (total size of all TFM files, approximately). 
+% Must be >= 20000 and <= 4000000 (without tex.ch changes).
+%font_mem_size = 1200000
+
+% Total number of fonts. Must be >= 50 and <= 2000 (without tex.ch changes).
+%font_max = 2000
+
+% Extra space for the hash table of control sequences (which allows 10K
+% names as distributed).
+hash_extra = 200000
+
+% Max number of characters in all strings, including all error messages,
+% help texts, font names, control sequences.  These values apply to TeX and MP.
+pool_size = 3850000
+% Minimum pool space after TeX/MP's own strings; must be at least
+% 25000 less than pool_size, but doesn't need to be nearly that large.
+%string_vacancies = 90000
+% Maximum number of strings.
+%max_strings = 100000
+% min pool space left after loading .fmt
+%pool_free = 47500
+
+% Buffer size.  TeX uses the buffer to contain input lines, but macro
+% expansion works by writing material into the buffer and reparsing the
+% line.  As a consequence, certain constructs require the buffer to be
+% very large, even though most documents can be handled with a small value.
+%buf_size = 200000
+
+% Hyphenation trie.  The maximum possible is 4194303 (ssup_trie_size in
+% the sources), but we don't need that much.  The value here suffices
+% for all known free hyphenation patterns to be loaded simultaneously
+% (as TeX Live does).
+% 
+%trie_size = 400000
+
+%hyph_size = 8191        % prime number of hyphenation exceptions, >610, <32767.
+                        % http://primes.utm.edu/curios/page.php/8191.html
+%nest_size = 500		% simultaneous semantic levels (e.g., groups)
+%max_in_open = 15	% simultaneous input files and error insertions
+%param_size = 10000	% simultaneous macro parameters
+%save_size = 5000	% for saving values outside current group
+save_size=800000
+stack_size = 500000	% simultaneous input sources
+
+
+
+
+% It's probably inadvisable to change these. At any rate, we must have:
+% 45 < error_line      < 255;
+% 30 < half_error_line < error_line - 15;
+% 60 <= max_print_line;
+% These apply to Metafont and MetaPost as well.
+error_line = 254
+half_error_line = 127
+max_print_line = 32000
+
